C#/Lib/XCGUI.cs


        [DllImport("xcgui.dll", EntryPoint = "XEle_SetTextColor", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void XEle_SetTextColor(int hEle, int color, byte alpha);

        [DllImport("xcgui.dll", EntryPoint = "XEle_GetTextColor", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int XEle_GetTextColor(int hEle);

        [DllImport("xcgui.dll", EntryPoint = "XEle_SetFocusBorderColor", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void XEle_SetFocusBorderColor(int hEle, int color, byte alpha);

        [DllImport("xcgui.dll", EntryPoint = "XEle_GetFocusBorderColor", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int XEle_GetFocusBorderColor(int hEle);

        [DllImport("xcgui.dll", EntryPoint = "XEle_SetFont", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void XEle_SetFont(int hEle, int hFontx);

        [DllImport("xcgui.dll", EntryPoint = "XEle_GetFont", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int XEle_GetFont(int hEle);

        [DllImport("xcgui.dll", EntryPoint = "XEle_SetAlpha", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void XEle_SetAlpha(int hEle, byte alpha);

        [DllImport("xcgui.dll", EntryPoint = "XEle_GetChildCount", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int XEle_GetChildCount(int hEle);

        [DllImport("xcgui.dll", EntryPoint = "XEle_GetChildByIndex", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int XEle_GetChildByIndex(int hEle, int index);

        [DllImport("xcgui.dll", EntryPoint = "XEle_GetChildByID", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int XEle_GetChildByID(int hEle, int id);

        [DllImport("xcgui.dll", EntryPoint = "XEle_GetChildShapeCount", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int XEle_GetChildShapeCount(int hEle);

        [DllImport("xcgui.dll", EntryPoint = "XEle_GetChildShapeByIndex", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int XEle_GetChildShapeByIndex(int hEle, int index);

        [DllImport("xcgui.dll", EntryPoint = "XEle_HitChildEle", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int XEle_HitChildEle(int hEle, POINT* pPt);

        [DllImport("xcgui.dll", EntryPoint = "XEle_BindLayoutObject", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void XEle_BindLayoutObject(int hEle, int hLayout);

        [DllImport("xcgui.dll", EntryPoint = "XEle_GetLayoutObject", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int XEle_GetLayoutObject(int hEle);

        [DllImport("xcgui.dll", EntryPoint = "XEle_GetParentLayoutObject", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int XEle_GetParentLayoutObject(int hEle);

        [DllImport("xcgui.dll", EntryPoint = "XEle_SetUserData", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void XEle_SetUserData(int hEle, int nData);

        [DllImport("xcgui.dll", EntryPoint = "XEle_GetUserData", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int XEle_GetUserData(int hEle);

        [DllImport("xcgui.dll", EntryPoint = "XEle_GetContentSize", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void XEle_GetContentSize(int hEle, SIZE* pSize);

        [DllImport("xcgui.dll", EntryPoint = "XEle_SetCapture", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void XEle_SetCapture(int hEle, bool b);

        [DllImport("xcgui.dll", EntryPoint = "XEle_SetLayoutWidth", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void XEle_SetLayoutWidth(int hEle, int nType, int nWidth);

        [DllImport("xcgui.dll", EntryPoint = "XEle_SetLayoutHeight", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void XEle_SetLayoutHeight(int hEle, int nType, int nHeight);

        [DllImport("xcgui.dll", EntryPoint = "XEle_GetLayoutWidth", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void XEle_GetLayoutWidth(int hEle, int pType, int pWidth);

        [DllImport("xcgui.dll", EntryPoint = "XEle_GetLayoutHeight", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void XEle_GetLayoutHeight(int hEle, int pType, int pHeight);

        [DllImport("xcgui.dll", EntryPoint = "XEle_RedrawEle", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void XEle_RedrawEle(int hEle, bool bImmediate);

        [DllImport("xcgui.dll", EntryPoint = "XEle_RedrawRect", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void XEle_RedrawRect(int hEle, RECT* pRect, bool bImmediate);

        [DllImport("xcgui.dll", EntryPoint = "XEle_Destroy", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void XEle_Destroy(int hEle);

        [DllImport("xcgui.dll", EntryPoint = "XEle_AddBkBorder", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void XEle_AddBkBorder(int hEle, int color, byte alpha, int width);

        [DllImport("xcgui.dll", EntryPoint = "XEle_AddBkFill", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void XEle_AddBkFill(int hEle, int color, byte alpha);

        [DllImport("xcgui.dll", EntryPoint = "XEle_AddBkImage", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void XEle_AddBkImage(int hEle, int hImage);

        [DllImport("xcgui.dll", EntryPoint = "XEle_GetBkInfoCount", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int XEle_GetBkInfoCount(int hEle);

        [DllImport("xcgui.dll", EntryPoint = "XEle_ClearBkInfo", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void XEle_ClearBkInfo(int hEle);

        [DllImport("xcgui.dll", EntryPoint = "XEle_GetBkInfoManager", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int XEle_GetBkInfoManager(int hEle);

        [DllImport("xcgui.dll", EntryPoint = "XEle_GetStateFlags", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int XEle_GetStateFlags(int hEle);

        [DllImport("xcgui.dll", EntryPoint = "XEle_DrawFocus", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern bool XEle_DrawFocus(int hEle, int hDraw, RECT pRect);

        [DllImport("xcgui.dll", EntryPoint = "XEle_EnableTransparentChannel", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void XEle_EnableTransparentChannel(int hEle, bool bEnable);

        [DllImport("xcgui.dll", EntryPoint = "XEle_SetToolTip", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void XEle_SetToolTip(int hEle, string pText);

        [DllImport("xcgui.dll", EntryPoint = "XEle_GetToolTip", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void XEle_GetToolTip(int hEle, string pOut, int nOutLen);

        [DllImport("xcgui.dll", EntryPoint = "XEle_EnableToolTip", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void XEle_EnableToolTip(int hEle, bool bEnable);

        [DllImport("xcgui.dll", EntryPoint = "XEle_AdjustLayoutObject", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void XEle_AdjustLayoutObject(int hEle);

        [DllImport("xcgui.dll", EntryPoint = "XEle_AdjustLayout", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void XEle_AdjustLayout(int hEle);

        [DllImport("xcgui.dll", EntryPoint = "XEle_RegEventTest", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern bool XEle_RegEventTest(int nEvent, int pParamType);

        [DllImport("xcgui.dll", EntryPoint = "XFont_Create", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int XFont_Create(int size);

        [DllImport("xcgui.dll", EntryPoint = "XFont_Create2", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int XFont_Create2(string pName, int size, bool bBold, bool bItalic, bool bUnderline, bool bStrikeOut);

        [DllImport("xcgui.dll", EntryPoint = "XFont_CreateEx", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int XFont_CreateEx(LOGFONTW* pFontInfo);

        [DllImport("xcgui.dll", EntryPoint = "XFont_CreateFromHFONT", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int XFont_CreateFromHFONT(int hFont);

        [DllImport("xcgui.dll", EntryPoint = "XFont_EnableAutoDestroy", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void XFont_EnableAutoDestroy(int hFontX, bool bEnable);

        [DllImport("xcgui.dll", EntryPoint = "XFont_Destroy", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void XFont_Destroy(int hFontX);

        [DllImport("xcgui.dll", EntryPoint = "XFont_GetHFONT", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int XFont_GetHFONT(int hFontX);

        [DllImport("xcgui.dll", EntryPoint = "XFrameWnd_Create", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int XFrameWnd_Create(int x, int y, int cx, int cy, string pTitle, int hWndParent, int XCStyle);

        [DllImport("xcgui.dll", EntryPoint = "XFrameWnd_CreateEx", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int XFrameWnd_CreateEx(int dwExStyle, string lpClassName, string lpWindowName, int dwStyle, int x, int y, int cx, int cy, int hWndParent, int XCStyle);

        [DllImport("xcgui.dll", EntryPoint = "XFrameWnd_GetLayoutAreaRect", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void XFrameWnd_GetLayoutAreaRect(int hWindow, RECT* pRect);
